# currency_converter_project

./: ILS.py  USD.py  __init__.py  coins.py  eur.py  ils.py  main.py  newfile.py  newfile3.py  pyproject.toml  result.py  usd.py
